--- a/styles.html
+++ b/styles.html
@@ -1,1 +1,35 @@
+body {
+  margin: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  background-color: #f0f0f0;
+}
+
+#game-container {
+  text-align: center;
+}
+
+#color-display {
+  width: 200px;
+  height: 200px;
+  margin: 20px;
+  border: 2px solid #333;
+  display: inline-block;
+}
+
+.color-option {
+  display: inline-block;
+  width: 50px;
+  height: 50px;
+  margin: 5px;
+  cursor: pointer;
+  border: 1px solid #333;
+}
+
+#result-message {
+  margin-top: 20px;
+  font-size: 18px;
+}
 
